[gd_scene load_steps=3 format=3 uid="uid://touchcontrols"]

[ext_resource type="Script" path="res://Scripts/UI/TouchControls.gd" id="1_touch"]
[ext_resource type="PackedScene" uid="uid://joystick" path="res://Scenes/UI/VirtualJoystick.tscn" id="2_joystick"]

[node name="TouchControls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_touch")

[node name="VirtualJoystick" parent="." instance=ExtResource("2_joystick")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = -50.0
grow_vertical = 0

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -250.0
grow_horizontal = 0
grow_vertical = 0

[node name="Accelerate" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "GAS"

[node name="Brake" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -100.0
offset_right = -170.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "BRAKE"

[node name="Interact" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -170.0
grow_horizontal = 0
focus_mode = 0
text = "USE"

[connection signal="button_down" from="Buttons/Accelerate" to="." method="_on_accelerate_button_down"]
[connection signal="button_up" from="Buttons/Accelerate" to="." method="_on_accelerate_button_up"]
[connection signal="button_down" from="Buttons/Brake" to="." method="_on_brake_button_down"]
[connection signal="button_up" from="Buttons/Brake" to="." method="_on_brake_button_up"]
[connection signal="button_down" from="Buttons/Interact" to="." method="_on_interact_button_down"]
[connection signal="button_up" from="Buttons/Interact" to="." method="_on_interact_button_up"]
